# Automatic-rubik-s-cube-solver

./: README.md
dynamixel_12dof_arm/: CMakeLists.txt  mainpage.dox  package.xml
dynamixel_12dof_arm/config/: dynamixel_joint_controllers.yaml
dynamixel_12dof_arm/euslisp/: forscan.l  operation.l  test_op.l
dynamixel_12dof_arm/euslisp/old_examples/: test-dynamixel-motor.l
dynamixel_12dof_arm/launch/: dynamixel_12dof_arm_bringup.launch  gripper_controller_spawner.launch
dynamixel_12dof_arm/scripts/: create_udev_rules  gripper_controller_spawner.sh  plotting.py  scan_ids.py  second_camera.py  test-camera.py
dynamixel_12dof_arm/test/: test-dxl-12dof-arm.l  test-dxl-12dof-arm.test
vision/: forscan.py  plotting.py  second_camera.py  test-camera.py
